--- a/src/main/resources/fxml/CustomerTableView.fxml
+++ b/src/main/resources/fxml/CustomerTableView.fxml
@@ -4,118 +4,106 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import java.lang.String?>
 <?import java.util.HashMap?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
 	fx:controller="de.htwsaar.prog3.carrental.controller.CustomerTableViewController">
 	<top>
 		<GridPane BorderPane.alignment="CENTER">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
 			</rowConstraints>
-			<children>
-				<MenuBar prefHeight="10.0" GridPane.columnIndex="0" GridPane.columnSpan="5"
-					GridPane.rowIndex="0">
-					<menus>
-						<Menu mnemonicParsing="true" text="%menubar-view-file">
-							<items>
-								<MenuItem mnemonicParsing="false" text="%menubar-operation-cars"
-									onAction="#handleCarMenuItemClicked" />
-								<MenuItem mnemonicParsing="false" text="%menubar-operation-customers"
-									onAction="#handleCustomerMenuItemClicked" />
-								<MenuItem mnemonicParsing="false" text="%menubar-operation-employees"
-									onAction="#handleEmployeeMenuItemClicked" />
-								<MenuItem mnemonicParsing="false" text="%menubar-operation-rentals"
-									onAction="#handleRentalMenuItemClicked" />
-								<SeparatorMenuItem mnemonicParsing="false" />
-								<MenuItem mnemonicParsing="false" text="%menubar-operation-close"
-									onAction="#handleCloseMenuItemClicked" />
-							</items>
-						</Menu>
-						<Menu mnemonicParsing="true" text="%menubar-view-edit">
-							<items>
-								<MenuItem mnemonicParsing="false" text="%menubar-operation-new"
-									onAction="#handleNewButtonClicked" />
-								<MenuItem mnemonicParsing="false" text="%menubar-operation-edit"
-									onAction="#handleEditButtonClicked" />
-								<MenuItem mnemonicParsing="false" text="%menubar-operation-delete"
-									onAction="#handleDeleteButtonClicked" />
-							</items>
-						</Menu>
-						<Menu mnemonicParsing="true" text="%menubar-view-help">
-							<items>
-								<MenuItem mnemonicParsing="false" text="%menubar-operation-about"
-									onAction="#handleAboutMenuItemClicked" />
-							</items>
-						</Menu>
-					</menus>
-					<padding>
-						<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-					</padding>
-				</MenuBar>
-				<fx:define>
-					<HashMap fx:id="searchComboBoxFieldStrings" id="%customer-id-label"
-							 dateOfBirth="%customer-date-of-birth-label" driverLicenseId="%customer-driver-license-id-label"
-							 emailAddress="%customer-email-label" firstName="%customer-first-name-label"
-							 houseNumber="%customer-house-number-label" lastName="%customer-last-name-label"
-							 phoneNumber="%customer-phone-number-label" street="%customer-street-label"
-							 city="%customer-city-label" idNumber="%customer-id-number-label"
-							 zipCode="%customer-zip-code-label" />
-				</fx:define>
-				<ComboBox fx:id="searchComboBoxField" GridPane.rowIndex="1" GridPane.columnIndex="0"
-						  promptText="%search-combobox-field-text" prefWidth="Infinity" GridPane.halignment="CENTER"
-						  GridPane.valignment="CENTER">
-					<items>
-						<FXCollections fx:factory="observableArrayList">
-							<fx:reference source="searchComboBoxFieldStrings.id" />
-							<fx:reference source="searchComboBoxFieldStrings.dateOfBirth" />
-							<fx:reference source="searchComboBoxFieldStrings.driverLicenseId" />
-							<fx:reference source="searchComboBoxFieldStrings.emailAddress" />
-							<fx:reference source="searchComboBoxFieldStrings.firstName" />
-							<fx:reference source="searchComboBoxFieldStrings.houseNumber" />
-							<fx:reference source="searchComboBoxFieldStrings.lastName" />
-							<fx:reference source="searchComboBoxFieldStrings.phoneNumber" />
-							<fx:reference source="searchComboBoxFieldStrings.street" />
-							<fx:reference source="searchComboBoxFieldStrings.city" />
-							<fx:reference source="searchComboBoxFieldStrings.idNumber" />
-							<fx:reference source="searchComboBoxFieldStrings.zipCode" />
-						</FXCollections>
-					</items>
-				</ComboBox>
-				<fx:define>
-					<HashMap fx:id="searchComboBoxComparatorStrings" equals="%search-combobox-equals"
-						like="%search-combobox-like" />
-				</fx:define>
-				<ComboBox fx:id="searchComboBoxComparator" GridPane.rowIndex="1"
-						  GridPane.columnIndex="1" promptText="%search-combobox-comparator-text" prefWidth="Infinity"
-						  GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-					<items>
-						<FXCollections fx:factory="observableArrayList">
-							<fx:reference source="searchComboBoxComparatorStrings.equals" />
-							<fx:reference source="searchComboBoxComparatorStrings.like" />
-						</FXCollections>
-					</items>
-				</ComboBox>
-				<TextField fx:id="searchTextField" GridPane.rowIndex="1" GridPane.columnIndex="2"
-						   promptText="%search-textfield-text" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-				<Button fx:id="buttonApplyCurrentFilter" mnemonicParsing="false"
-					onAction="#handleApplyCurrentFilterButtonClicked" text="%button-search-label"
-					textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="3" prefWidth="Infinity"
-					GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-				<Button fx:id="buttonRemoveCurrentFilter" mnemonicParsing="false"
-					onAction="#handleRemoveCurrentFilterButtonClicked" text="%button-clear-filter-label"
-					textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="4" prefWidth="Infinity"
-					GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-			</children>
+			<MenuBar prefHeight="10.0" GridPane.columnIndex="0" GridPane.columnSpan="5"
+					 GridPane.rowIndex="0">
+				<padding>
+					<Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+				</padding>
+				<Menu text="%menubar-view-file">
+					<MenuItem mnemonicParsing="false" text="%menubar-operation-cars"
+							  onAction="#handleCarMenuItemClicked"/>
+					<MenuItem mnemonicParsing="false" text="%menubar-operation-customers"
+							  onAction="#handleCustomerMenuItemClicked"/>
+					<MenuItem mnemonicParsing="false" text="%menubar-operation-employees"
+							  onAction="#handleEmployeeMenuItemClicked"/>
+					<MenuItem mnemonicParsing="false" text="%menubar-operation-rentals"
+							  onAction="#handleRentalMenuItemClicked"/>
+					<SeparatorMenuItem mnemonicParsing="false"/>
+					<MenuItem mnemonicParsing="false" text="%menubar-operation-close"
+							  onAction="#handleCloseMenuItemClicked"/>
+				</Menu>
+				<Menu text="%menubar-view-edit">
+					<MenuItem mnemonicParsing="false" text="%menubar-operation-new"
+							  onAction="#handleNewButtonClicked"/>
+					<MenuItem mnemonicParsing="false" text="%menubar-operation-edit"
+							  onAction="#handleEditButtonClicked"/>
+					<MenuItem mnemonicParsing="false" text="%menubar-operation-delete"
+							  onAction="#handleDeleteButtonClicked"/>
+				</Menu>
+				<Menu text="%menubar-view-help">
+					<MenuItem mnemonicParsing="false" text="%menubar-operation-about"
+							  onAction="#handleAboutMenuItemClicked"/>
+				</Menu>
+			</MenuBar>
+			<fx:define>
+				<HashMap fx:id="searchComboBoxFieldStrings" id="%customer-id-label"
+						 dateOfBirth="%customer-date-of-birth-label" driverLicenseId="%customer-driver-license-id-label"
+						 emailAddress="%customer-email-label" firstName="%customer-first-name-label"
+						 houseNumber="%customer-house-number-label" lastName="%customer-last-name-label"
+						 phoneNumber="%customer-phone-number-label" street="%customer-street-label"
+						 city="%customer-city-label" idNumber="%customer-id-number-label"
+						 zipCode="%customer-zip-code-label"/>
+			</fx:define>
+			<ComboBox fx:id="searchComboBoxField" GridPane.rowIndex="1" GridPane.columnIndex="0"
+					  promptText="%search-combobox-field-text" prefWidth="Infinity" GridPane.halignment="CENTER"
+					  GridPane.valignment="CENTER">
+				<items>
+					<FXCollections fx:factory="observableArrayList">
+						<fx:reference source="searchComboBoxFieldStrings.id"/>
+						<fx:reference source="searchComboBoxFieldStrings.dateOfBirth"/>
+						<fx:reference source="searchComboBoxFieldStrings.driverLicenseId"/>
+						<fx:reference source="searchComboBoxFieldStrings.emailAddress"/>
+						<fx:reference source="searchComboBoxFieldStrings.firstName"/>
+						<fx:reference source="searchComboBoxFieldStrings.houseNumber"/>
+						<fx:reference source="searchComboBoxFieldStrings.lastName"/>
+						<fx:reference source="searchComboBoxFieldStrings.phoneNumber"/>
+						<fx:reference source="searchComboBoxFieldStrings.street"/>
+						<fx:reference source="searchComboBoxFieldStrings.city"/>
+						<fx:reference source="searchComboBoxFieldStrings.idNumber"/>
+						<fx:reference source="searchComboBoxFieldStrings.zipCode"/>
+					</FXCollections>
+				</items>
+			</ComboBox>
+			<fx:define>
+				<HashMap fx:id="searchComboBoxComparatorStrings" equals="%search-combobox-equals"
+						 like="%search-combobox-like"/>
+			</fx:define>
+			<ComboBox fx:id="searchComboBoxComparator" GridPane.rowIndex="1"
+					  GridPane.columnIndex="1" promptText="%search-combobox-comparator-text" prefWidth="Infinity"
+					  GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+				<items>
+					<FXCollections fx:factory="observableArrayList">
+						<fx:reference source="searchComboBoxComparatorStrings.equals"/>
+						<fx:reference source="searchComboBoxComparatorStrings.like"/>
+					</FXCollections>
+				</items>
+			</ComboBox>
+			<TextField fx:id="searchTextField" GridPane.rowIndex="1" GridPane.columnIndex="2"
+					   promptText="%search-textfield-text" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+			<Button fx:id="buttonApplyCurrentFilter" mnemonicParsing="false"
+				onAction="#handleApplyCurrentFilterButtonClicked" text="%button-search-label"
+				textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="3" prefWidth="Infinity"
+				GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+			<Button fx:id="buttonRemoveCurrentFilter" mnemonicParsing="false"
+				onAction="#handleRemoveCurrentFilterButtonClicked" text="%button-clear-filter-label"
+				textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="4" prefWidth="Infinity"
+				GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
 		</GridPane>
 	</top>
 	<center>
@@ -140,27 +128,25 @@
 	<bottom>
 		<GridPane BorderPane.alignment="CENTER" prefHeight="25.0" prefWidth="1442.0">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0"/>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0"/>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0"/>
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
 			</rowConstraints>
-			<children>
-				<Button fx:id="buttonCreateNewCustomer" mnemonicParsing="false"
-					onAction="#handleNewButtonClicked" text="%button-new-label" textAlignment="CENTER"
-					GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER"
-					GridPane.valignment="CENTER" />
-				<Button fx:id="buttonEditSelectedObject" mnemonicParsing="false"
-						onAction="#handleEditButtonClicked" text="%button-edit-label" textAlignment="CENTER"
-						GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"
-						GridPane.valignment="CENTER" />
-				<Button fx:id="buttonDeleteSelectedObject" mnemonicParsing="false"
-					onAction="#handleDeleteButtonClicked" text="%button-delete-label" textAlignment="CENTER"
-					GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.halignment="CENTER"
-					GridPane.valignment="CENTER" />
-			</children>
+			<Button fx:id="buttonCreateNewCustomer" mnemonicParsing="false"
+				onAction="#handleNewButtonClicked" text="%button-new-label" textAlignment="CENTER"
+				GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER"
+				GridPane.valignment="CENTER"/>
+			<Button fx:id="buttonEditSelectedObject" mnemonicParsing="false"
+					onAction="#handleEditButtonClicked" text="%button-edit-label" textAlignment="CENTER"
+					GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"
+					GridPane.valignment="CENTER"/>
+			<Button fx:id="buttonDeleteSelectedObject" mnemonicParsing="false"
+				onAction="#handleDeleteButtonClicked" text="%button-delete-label" textAlignment="CENTER"
+				GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.halignment="CENTER"
+				GridPane.valignment="CENTER"/>
 		</GridPane>
 	</bottom>
 </BorderPane>
